adicionado gif de commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         devem ter em suas mensagens descrição, de forma clara, do que foi feito, a fim de facilitar o entendimento
         para outras pessoas que estão participando do projeto.
       </p>
-      .
+      <img src="images/commit.gif" alt="Commit" />
     </section>
     <script type="module" src="/main.js"></script>
   </body>
