--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       </p>
       <img src="images/commit.gif" alt="Commit" />
     </section>
+    <section>
+      <h2>Branches</h2>
+      <p>
+        As branches são ramificações em um ponto do código.
+        Teremos 2 branches principais:
+        <ul>
+          <li>main</li>
+          <li>develop</li>
+        </ul>
+      </p>
+    </section>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
