iniciado a seção de branches

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
         As branches são ramificações em um ponto do código.
         Teremos 2 branches principais:
         <ul>
-          <li>main</li>
-          <li>develop</li>
+          <li>
+            <span class="command">main</span>,
+            onde apenas código validado e testado será enviado.
+          </li>
+          <li>
+            <span class="command">develop</span>,
+            onde o código de desenvolvimento será enviado.
+          </li>
         </ul>
       </p>
+      <img src="images/branches.gif" alt="Branches" />
     </section>
     <script type="module" src="/main.js"></script>
   </body>
