--- a/index.html
+++ b/index.html
@@ -10,36 +10,75 @@
     <title>Boas Práticas Git</title>
   </head>
   <body>
-    <h1 class="text-center">
-      Boas Práticas Git
-    </h1>
-    <section>
-      <h2>Commit</h2>
-      <p>
-        Os commits, que são feitos pelo comando <span class="command">git commit -m "mensagem"</span>,
-        devem ter em suas mensagens descrição, de forma clara, do que foi feito, a fim de facilitar o entendimento
-        para outras pessoas que estão participando do projeto.
-      </p>
-      <img src="images/commit.gif" alt="Commit" />
-    </section>
-    <section>
-      <h2>Branches</h2>
-      <p>
-        As branches são ramificações em um ponto do código.
-        Teremos 2 branches principais:
+    <main>
+      <h1 class="text-center">
+        Boas Práticas Git
+      </h1>
+      <ul class="summary">
+        <li>
+          <a href="#commit">Commit</a>
+        </li>
+        <li>
+          <a href="#branches">Branches</a>
+        </li>
+        <li>
+          <a href="#comentarios">Comentários</a>
+        </li>
+        <li>
+          <a href="#gitlens">GitLens</a>
+        </li>
+      </ul>
+      <section>
+        <h2 id="commit">Commit</h2>
+        <p>
+          Os commits, que são feitos pelo comando <span class="command">git commit -m "mensagem"</span>,
+          devem ter em suas mensagens descrição, de forma clara, do que foi feito, a fim de facilitar o entendimento
+          para outras pessoas que estão participando do projeto.
+        </p>
+        <img src="images/commit.gif" alt="Commit" />
+      </section>
+      <section>
+        <h2 id="branches">Branches</h2>
+        <p>
+          As branches são ramificações em um ponto do código. Utilizaremos um fluxo estilo gitflow.
+          Teremos 2 branches principais:
+        </p>
         <ul>
           <li>
             <span class="command">main</span>,
-            onde apenas código validado e testado será enviado.
+            que mantém a release oficial do projeto, que será mandado para produção.
           </li>
           <li>
             <span class="command">develop</span>,
-            onde o código de desenvolvimento será enviado.
+            que serve para integração das branches de features.
           </li>
         </ul>
-      </p>
-      <img src="images/branches.gif" alt="Branches" />
-    </section>
+        <p>
+          Para cada feature que for desenvolvida, deverá ser criada uma branch nova com o comando
+          <span class="command">git checkout -b nome_branch</span>
+          com nome da mesma sendo referente à feature que será feita.
+          Ex: <span class="text-underline">criacao_navbar</span>
+        </p>
+        <img src="images/branches.gif" alt="Branches" />
+      </section>
+      <section>
+        <h2 id="comentarios">Comentários</h2>
+        <p>
+          Sem entrar muito em boas práticas de programação, comentários em código antigo devem ser evitados,
+          já que o próprio git mantém histórico das modificações.
+        </p>
+      </section>
+      <section>
+        <h2 id="gitlens">GitLens</h2>
+        <p>
+          Uma extensão muito útil para o VsCode é o GitLens, que exibe as diferenças do código de um commit para o outro.
+        </p>
+        <img src="https://raw.githubusercontent.com/eamodio/vscode-gitlens/main/images/docs/revision-navigation.gif" alt="GitLens" />
+      </section>
+    </main>
+    <footer class="text-center">
+      Feito por Paulo Henrique
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
