--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
       <section>
         <h2 id="comentarios">Comentários</h2>
         <p>
-          Sem entrar muito em boas práticas de programação, comentários em código antigo devem ser evitados,
-          já que o próprio git mantém histórico das modificações.
+          Sem entrar muito em boas práticas de programação, comentários em código morto devem ser evitados,
+          já que o próprio git mantém histórico das modificações. Se for preciso reverter, apenas reverter o Commit
+          ou olhar no histórico de commits e copiar pro fluxo atual.
         </p>
       </section>
       <section>
